old-code/sa/prometheus/aws-logging/loki/vs.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: loki-scalable
  namespace: logging
spec:
  gateways:
    - istio-system/otb-istio-ingressgateway-inner
  hosts:
    - otb-loki-scalable.slleisure.com
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: loki-gateway.logging.svc.cluster.local
        port:
          number: 80
